Fix template target layout issues
[5.x]

ERM38583

(cherry picked from commit ab813d49e264ddf2d9a3f83ddd0373ca9195b1a8)

--- a/resources/ext.forms.editor.less
+++ b/resources/ext.forms.editor.less
@@ -166,10 +166,6 @@
 	}
 }
 
-.oo-ui-messageDialog {
-	z-index: 11 !important;
-}
-
 .ui-draggable-dragging {
 	z-index: 999999;
 }
